--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
     <meta charset="UTF-8">
@@ -7,6 +8,12 @@
     <link href="assets/stylesheets/style.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <script type="text/javascript" src="mouseover.js"></script>
+    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
 </head>
   <header>
        <nav>
@@ -32,28 +39,27 @@
     <form id="tree-form">
         <div class="radio-toolbar">
             <input type="radio" id="mode1" name="treeSum" value="number" checked>
-            <label for="mode1">Pursuing a Masters degree (in # of students)</label>
+            <label for="mode1" onmouseover="responsiveVoice.speak('Pursuing a Masters degree (in # of students)','US English Female');" onmouseleave="responsiveVoice.cancel();">Pursuing a Masters degree (in # of students)</label>
             <input type="radio" id="mode2" name="treeSum" value="percent">
-            <label for="mode2">Pursuing a Masters degree (in %)</label>
+            <label for="mode2" onmouseover="responsiveVoice.speak('Pursuing a Masters degree (in %)','US English Female');" onmouseleave="responsiveVoice.cancel();">Pursuing a Masters degree (in %)</label>
             <input type="radio" id="mode3" name="treeSum" value="male">
-            <label for="mode3">Males in College (18-24yrs)(in %)</label>
+            <label for="mode3" onmouseover="responsiveVoice.speak('Males in College (18-24yrs)(in %)','US English Female');" onmouseleave="responsiveVoice.cancel();">Males in College (18-24yrs)(in %)</label>
             <input type="radio" id="mode4" name="treeSum" value="femal">
-            <label for="mode4">Females in College (18-24yrs) (in %)</label>
+            <label for="mode4" onmouseover="responsiveVoice.speak('Females in College (18-24yrs) (in %)','US English Female');" onmouseleave
         </div>
     </form>
 	<p></p>
     <div id="chart"></div>
 	<a name="state"></a>
     <p><br><br></p>
-    <h2 class="subtitle">Education Level of Population in Schooling: State-level Breakdown</h2>
+    <h2 class="subtitle" onmouseover="responsiveVoice.speak('Education Level of Population in Schooling: State-level Breakdown','US English Female');" onmouseleave="responsiveVoice.cancel();">Education Level of Population in Schooling: State-level Breakdown</h2>
 	
     <form id="stack-form">
         <div class="radio-toolbar">
             <input type="radio" id="radio1" name="mode" value="bypercent" checked>
-            <label for="radio1">Students (in %)</label>
+            <label for="radio1" onmouseover="responsiveVoice.speak('Students (in %)','US English Female');" onmouseleave="responsiveVoice.cancel();">Students (in %)</label>
             <input type="radio" id="radio2" name="mode" value="bycount">
-            <label for="radio2">Students (in number of people)</label>
-    </div>
+            <label for="radio2" onmouseover="responsiveVoice.speak('Students (in number of people)','US English Female');" onmouseleave="responsiveVoice.cancel();">Students (in number of people)</label>
     </form>
     <div>
         <svg id="stacked-bar-chart"></svg>
@@ -81,6 +87,13 @@
    Should be equal the the height of the header
  */
 </script>
+	 <audio>
+	 <source src="zapsplat_multimedia_click.mp3"></source>
+         <source src="zapsplat_multimedia_click.ogg"></source>
+         </audio>
+         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 </body>
 </html>
