--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
+	    <meta charset="UTF-8">
     <title>Educational Attainment in the United States</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="assets/stylesheets/style.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -13,6 +15,7 @@
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <script type="text/javascript" src="mouseover.js"></script>
     <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
+	
 </head>
   <header>
        <nav>
