--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-	    <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <title>Educational Attainment in the United States</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="assets/stylesheets/style.css" rel="stylesheet"/>
@@ -20,10 +20,10 @@
   <header>
        <nav>
     <ul>
-      <li><a href="#top" >Top</a></li>
-      <li><a href="#national">National</a></li>
-      <li><a href="#regional">Regional</a></li>
-      <li><a href="#state">State-Level</a></li>
+      <li><a href="#top" onmouseover="playclip();">Top</a></li>
+      <li><a href="#national" onmouseover="playclip();">National</a></li>
+      <li><a href="#regional" onmouseover="playclip();">Regional</a></li>
+      <li><a href="#state" onmouseover="playclip();">State-Level</a></li>
     <ul>
         </nav>
     </header>
