--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <input type="radio" id="mode2" name="treeSum" value="percent">
             <label for="mode2" onmouseover="responsiveVoice.speak('Pursuing a Masters degree (in %)','US English Female');" onmouseleave="responsiveVoice.cancel();">Pursuing a Masters degree (in %)</label>
             <input type="radio" id="mode3" name="treeSum" value="male">
-            <label for="mode3" onmouseover="responsiveVoice.speak('Males in College (18-24yrs)(in %)','US English Female');" onmouseleave="responsiveVoice.cancel();">Males in College (18-24yrs)(in %)</label>
+            <label for="mode3" onmouseover="responsiveVoice.speak('Males in College (18-24yrs) (in %)','US English Female');" onmouseleave="responsiveVoice.cancel();">Males in College (18-24yrs)(in %)</label>
             <input type="radio" id="mode4" name="treeSum" value="femal">
-            <label for="mode4" onmouseover="responsiveVoice.speak('Females in College (18-24yrs) (in %)','US English Female');" onmouseleave
+            <label for="mode4" onmouseover="responsiveVoice.speak('Females in College (18-24yrs) (in %)','US English Female');" onmouseleave="responsiveVoice.cancel();">Females in College (18-24yrs) (in %)</label>
         </div>
     </form>
 	<p></p>
